[package]
name = "ws_uring"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22" }
rustls = { version = "0.23.14", features = ["ring"] }
tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
websocket-sans-io = "0.1.0"
