[package]
name          = "a10-sys"
description   = "Generate the type definitions for A10"
version       = "0.0.0"
publish       = false
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
edition       = "2021"

[dependencies]
libc         = { version = "0.2.159", default-features = false }

[build-dependencies]
bindgen      = { version = "0.70.1", default-features = false, features = ["experimental"] }
